2003-08-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Magick.xs: Add support for CopyCyan, CopyMagenta,
	CopyYellow, and CopyBlack, composition operators.
	* magick/composite.c (CompositeImage): Added support for
	CopyCyanCompositeOp, CopyMagentaCompositeOp,
	CopyYellowCompositeOp, and CopyBlackCompositeOp, composition
	operators.

2003-08-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/*: Updated to current ImageMagick Wand API (minus a few
	unimplemented functions).
	* magick/image.c (TextureImage): Add status return because Wand API
	wants it.  Inherit is_grayscale status from texture image.
	* magick/fx.c (SolarizeImage): Add status return because Wand API
	wants it.
	* magick/resource.c (SetMagickResourceLimit): Add status return
	because Wand API wants it.
	* magick/draw.c (DrawPeekGraphicContext): Now returns a
	copy of the current DrawInfo context rather than returning
	a pointer into the context stack. The user must destroy
	this copy using DestroyDrawInfo() once it is no longer
	needed.

2003-08-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/filters/LIBRARY.txt: This file is necessary to
	incorporate analyze.c into the static build.  Without it the
	build fails.

2003-08-23  Lars Ruben Skyum  <lars.skyum@stibo.com>

	* magick/transform.c: ProfileImage updated to handle alpha
	channels and grayscale images. Also optimized color profiling of
	color mapped images and fixed a few bugs in profiling of CMYK
	images.
	* magic/locale_c.h: added MagickExport to prototype declaration of
	GetLocaleMessageFromID in WriteLOCALEImage again. Please update
	your locale coder.
	
2003-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c: Applied patch from Fojtik Jaroslav to use the
	GetMagicInfo() function to obtain the format of embedded images,
	and to provide a default WPG palette if the WPG file does not
	supply a palette.

2003-08-22  William Radcliffe  <billr@corbis.com>