@@ -53,6 +53,14 @@
 </tr>
 </table>
 <p>
+2003-08-31  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/image.c (GetImageChannelDepth): Return an 'unsigned int'
+        rather than 'long'.
+
+</UL>
+<p>
 2003-08-29  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
