@@ -4,6 +4,16 @@
 </HEAD>
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
+2003-08-29  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> lib/Magick++/Include.h (Magick): Added support for
+        CopyCyanCompositeOp, CopyMagentaCompositeOp,
+        CopyYellowCompositeOp, and CopyBlackCompositeOp, composition
+        operators.
+
+</UL>
+<p>
 2003-08-12  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
